--- a/gmall-ums/pom.xml
+++ b/gmall-ums/pom.xml
@@ -6,20 +6,23 @@
         <groupId>com.atguigu</groupId>
         <artifactId>gmall-1010</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.atguigu</groupId>
     <artifactId>gmall-ums</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>gmall-ums</name>
-    <description>用户管理系统</description>
-    <dependencies>
+    <description>用户系统</description>
 
-        <!--<dependency>
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>gmall-ums-interface</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>com.atguigu</groupId>
             <artifactId>gmall-common</artifactId>
@@ -51,16 +54,13 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-zipkin</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
